nginx/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
  labels:
    app.kubernetes.io/name: nginx-service
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: nginx
    app.kubernetes.io/managed-by: kustomize
spec:
  ports:
  - name: http
    nodePort: 31080
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: nginx-service
  sessionAffinity: None
  type: NodePort
