nginx/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflared-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
  - host: honahuku.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudflared-svc
            port:
              name: cloudflared
